// Copyright 2021 Ye Zi Jie.  All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file.
//
// Author: FishGoddess
// Email: fishgoddess@qq.com
// Created at 2021/09/16 01:42:33
syntax = "proto3";
package github.com.avinoplan.postar.api.postard;

// protoc -I=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative postard.proto
option go_package = "github.com/avino-plan/postar/api/postard";

import "google/protobuf/any.proto";

// ResponseCodes is all codes of response.
enum ResponseCodes {
  OK = 0;
  InternalServerError = 50000;
  TimeoutError = 50001;
}

// PostardResponse is the response of Postard.
message PostardResponse {
  ResponseCodes code = 1; // 0 is ok.
  string msg = 2; // For messaging.
  string traceId = 3; // For tracing.
  google.protobuf.Any data = 4; // Any data.
}

// Email wraps all information of using smtp service.
message Email {
  repeated string to = 1; // The receivers of one email.
  string    subject = 2;   // The subject of one email.
  string    bodyType = 3;   // The content type of body.
  string    body = 4;   // The body of one email.
}

// SendEmailOptions is the options of sending emails.
message SendEmailOptions {
  bool async = 1; // If need sending emails asynchronously.
  int64 timeout = 2; // Sending timeout.
}

// SendEmailRequest is the request of SendEmail.
message SendEmailRequest {
  Email email = 1; // Sending email.
  SendEmailOptions options = 2; // Sending options.
}

// Postard is the core service of postar.
service Postard {
  rpc SendEmail(SendEmailRequest) returns (PostardResponse); // For sending emails.
}